--- a/assets/css/custom-style.css
+++ b/assets/css/custom-style.css
@@ -5,3 +5,10 @@
     /* Horizontal centering */
     align-items: center;
 }
+
+pre {
+    background-color: #f4f4f4;
+    padding: 10px;
+    border: 1px solid #ccc;
+    white-space: pre-wrap;
+}
